# cursedwarden

./: AGENTS.md  Cargo.toml  full_code_archive.txt  read.py  Инвентарь в стиле Backpack Battles.txt
assets/: items.ron
docs/: Исправление механики инвентаря в игре.txt  Исправление механики инвентаря в стиле Backpack Battles (1).txt  Исправление механики инвентаря в стиле Backpack Battles.txt  Исправление механики инвентаря игры.txt  Проклятый Страж_ GDD и разработка Bevy.txt  Реализация инвентаря в стиле Backpack Battles.txt
src/: lib.rs  main.rs
src/core/: mod.rs
src/inventory/: mod.rs
src/plugins/: combat.rs  core.rs  grid.rs  inventory.rs  inventory_utils.rs  items.rs  metagame.rs  mod.rs  mutation.rs  shop.rs  ui.rs  visualization.rs
src/plugins/combat/: tests.rs
src/tests/: inventory_tests.rs  metagame_tests.rs  mod.rs
src/ui/: mod.rs
tests/: bag_system_test.rs  repro_item_transfer.rs  shop_test.rs  verification.rs  visualization_sanity.rs
