[package]
name = "cursed_warden"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_core_pipeline",
    # "bevy_gilrs", # Disable to avoid udev
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    # "bevy_winit", # Disable to avoid udev/windowing dependencies
    "bevy_state",
    "dynamic_linking",
    "multi_threaded",
    "png",
    "hdr",
    "tonemapping_luts",
    "smaa_luts",
] }
rand = "0.8"
ron = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
